devopspro/23Estrategiasdeploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1-versao
spec:
  replicas: 9
  selector:
    matchLabels:
      app: api-versao
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080" 
      labels:
        app: api-versao
        version: v1
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v3
        resources: {}
        ports:
        - containerPort: 8080
