devopspro/23Estrategiasdeploy/deploymentv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2-versao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-versao
      version: v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080" 
      labels:
        app: api-versao
        version: v2
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v2
        resources: {}
        ports:
        - containerPort: 8080
