devopspro/23Estrategiasdeploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-deploy-ingress
  labels:
    name: api-deploy-ingress
spec:
  rules:
  - host: maferreira94.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-versao-service
            port: 
              number: 80
